--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,40 @@
+
+
 .title {
     font-size: 24px;
     font-weight: bold;
     color: #323B45;
     text-align: center;
 }
+
+.container-pokemon {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    padding: 20px;
+    justify-content: center;
+}
+
+.pokemon {
+    width: 150px;
+    height: 250px;
+    border-radius: 10px;
+    border: 1px solid #48D0B0;
+    background-color: #48D0B0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
+.pokemon-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+}
+
+.pokemon-info {
+    list-style: none;
+}
+
